Simplify the copyright and add copyright linting

--- a/docker/containers/kafka/Dockerfile
+++ b/docker/containers/kafka/Dockerfile
@@ -1,4 +1,7 @@
 #
+#  Copyright 2020-2021 Zeek-Package
+#  Copyright 2015-2020 The Apache Software Foundation
+#
 #  Licensed to the Apache Software Foundation (ASF) under one or more
 #  contributor license agreements.  See the NOTICE file distributed with
 #  this work for additional information regarding copyright ownership.
