--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Run linting
         run: make lint
-  test:
+  e2e:
     strategy:
       matrix:
         platform: [ubuntu-latest]
@@ -30,5 +30,5 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-      - name: Run testing
-        run: make test
+      - name: Run e2e tests
+        run: make e2e
