Add e2e testing GitHub action (fixes #2) (#9)
* Add testing GitHub action (fixes #2)

* Move manual step into CI; remove from PR template

* Rename to e2e

* Revert the makefile test change

* First attempt at github actions docker layer caching

* Load docker cache if it exists

* Nitroba hosting moved

* Create intermediate directories for log outputs

* Revert "Create intermediate directories for log outputs"

This reverts commit 2050cb7c13816eaa7c90aaffcc635d3bbdc02231.

* Specify a different data path when running in GitHub Actions

* Override default test output directory for github actions

* Test docker caching

* Add cache from statements in docker compose

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,29 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Run linting
         run: make lint
+  e2e:
+    strategy:
+      matrix:
+        platform: [ubuntu-latest]
+    runs-on: ${{ matrix.platform }}
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+      - id: cache-docker
+        uses: actions/cache@v2
+        with:
+          path: ~/cache
+          key: ${{ runner.os }}-cache
+      - name: Run e2e tests
+        run: |
+          if [[ -f ~/cache/docker.tar ]]; then
+            echo "Loading ~/cache/docker.tar..."
+            docker load --input ~/cache/docker.tar
+          fi && \
+          make e2e
+      - name: Update docker cache
+        run: |
+             mkdir -p ~/cache && \
+             images=($(ls -1 docker/containers | awk '{print "zeek-kafka_" $0}')) && \
+             docker save ${images[*]} -o ~/cache/docker.tar || true
