--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
       - name: Run linting
-        run: make -d lint
+        run: make lint
   e2e:
     strategy:
       matrix:
