--- a/docker/containers/zeek/Dockerfile.ubuntu:20.04
+++ b/docker/containers/zeek/Dockerfile.ubuntu:20.04
@@ -27,31 +27,32 @@ COPY .screenrc /root
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update \
  && DEBIAN_FRONTEND=noninteractive apt-get -y install \
-    git \
-    cmake \
-    make \
-    gcc \
-    g++ \
-    flex \
+    bc \
     bison \
+    bsdmainutils \
+    cmake \
+    curl \
+    flex \
+    g++ \
+    gcc \
+    git \
+    lcov \
+    libkrb5-dev \
+    libmaxminddb-dev \
     libpcap-dev \
     libssl-dev \
+    make \
     python3 \
     python3-dev \
     python3-pip\
-    swig \
-    zlib1g-dev \
-    libmaxminddb-dev \
-    libkrb5-dev \
-    bsdmainutils \
-    sqlite3 \
-    curl \
-    wget \
-    unzip \
     ruby \
-    bc \
-    lcov \
-  && rm -rf /var/lib/apt/lists/*
+    screen \
+    sqlite3 \
+    swig \
+    unzip \
+    wget \
+    zlib1g-dev \
+ && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install junit2html
 RUN gem install coveralls-lcov
@@ -60,27 +61,30 @@ RUN gem install coveralls-lcov
 WORKDIR /root
 RUN git clone https://github.com/zeek/zeek
 WORKDIR zeek/
-RUN git checkout "v${ZEEK_VERSION}" && \
-  git submodule update --init --recursive && \
-  ./configure && \
-  make -j $(nproc --all || echo 1) && \
-  make install && \
-  ldconfig
+RUN git checkout "v${ZEEK_VERSION}" \
+ && git submodule update --init --recursive \
+ && ./configure \
+ && make -j $(nproc --all || echo 1) && \
+ && make \
+ && make install \
+ && ldconfig
 ENV PATH="${PATH}:/usr/local/zeek/bin"
 ENV PATH="${PATH}:/usr/bin"
 
 # install pip3 (zkg itself is now available via Zeek)
 WORKDIR /root
 COPY requirements.txt requirements.txt
-RUN apt-get -y install python3-pip diffutils && \
-    apt-get clean all && \
-    python3 -m pip install --upgrade pip && \
-    python3 -m pip install -r requirements.txt
+RUN apt-get -y install diffutils \
+                       python3-pip \
+ && apt-get clean all \
+ && python3 -m pip install --upgrade pip \
+ && python3 -m pip install -r requirements.txt
 
 # install librdkafka
 WORKDIR /root
 RUN curl -L "https://github.com/edenhill/librdkafka/archive/v${LIBRDKAFKA_VERSION}.tar.gz" | tar xvz
 WORKDIR "librdkafka-${LIBRDKAFKA_VERSION}/"
-RUN ./configure --enable-sasl && \
+RUN ./configure --enable-sasl --install-deps \
   make -j $(nproc --all || echo 1) && \
-  make install
+ && make \
+ && make install
