--- a/docker/containers/zeek/Dockerfile
+++ b/docker/containers/zeek/Dockerfile
@@ -25,7 +25,8 @@ ARG LIBRDKAFKA_VERSION
 # copy in the .screenrc
 COPY .screenrc /root
 
-RUN apt-get update && apt-get -y install \
+RUN DEBIAN_FRONTEND=noninteractive apt-get update \
+ && DEBIAN_FRONTEND=noninteractive apt-get -y install \
     git \
     cmake \
     make \
