Complete all e2e tests regardless of failures in other environments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
       matrix:
         platform: [Ubuntu-20.04]
         zeek-kafka-os: [centos, ubuntu]
+      fail-fast: false
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
