--- a/docker/containers/zeek/Dockerfile.ubuntu:20.04
+++ b/docker/containers/zeek/Dockerfile.ubuntu:20.04
@@ -30,6 +30,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     bc \
     bison \
     bsdmainutils \
+    bzip2 \
     cmake \
     curl \
     flex \
@@ -43,9 +44,14 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     libpcap-dev \
     libssl-dev \
     make \
+    nullmailer \
     python3 \
     python3-dev \
     python3-pip\
+    python3-smmap \
+    python3-gitdb \
+    python3-git \
+    python3-semantic-version \
     ruby \
     screen \
     sqlite3 \
@@ -56,6 +62,8 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
     wget \
     zlib1g-dev \
  && rm -rf /var/lib/apt/lists/*
+
+RUN echo 'export PATH=$PATH:/opt/zeek/bin' > /etc/profile.d/zeek.sh
 
 RUN pip3 install junit2html
 RUN gem install coveralls-lcov
