Port improvements from b13485a

--- a/docker/containers/zeek/Dockerfile.centos:8
+++ b/docker/containers/zeek/Dockerfile.centos:8
@@ -65,26 +65,25 @@ WORKDIR zeek/
 RUN git checkout "v${ZEEK_VERSION}" \
  && git submodule update --init --recursive \
  && ./configure \
- && make \
+ && make -j $(nproc --all || echo 1) \
  && make install
 ENV PATH="${PATH}:/usr/local/zeek/bin"
 ENV PATH="${PATH}:/usr/bin"
 
-# install pip3 and zkg
+# install pip3
 WORKDIR /root
 COPY requirements.txt requirements.txt
 RUN dnf -y install diffutils \
                    python3-pip \
  && dnf clean all \
  && python3 -m pip install --upgrade pip \
- && python3 -m pip install -r requirements.txt \
- && zkg autoconfig
+ && python3 -m pip install -r requirements.txt
 
 # install librdkafka
 WORKDIR /root
 RUN curl -L "https://github.com/edenhill/librdkafka/archive/v${LIBRDKAFKA_VERSION}.tar.gz" | tar xvz
 WORKDIR "librdkafka-${LIBRDKAFKA_VERSION}/"
 RUN ./configure --enable-sasl --install-deps \
- && make \
+ && make -j $(nproc --all || echo 1) \
  && make install
 
