--- a/docker/containers/zeek/Dockerfile.ubuntu:20.04
+++ b/docker/containers/zeek/Dockerfile.ubuntu:20.04
@@ -75,7 +75,7 @@ WORKDIR zeek/
 RUN git checkout "v${ZEEK_VERSION}" \
  && git submodule update --init --recursive \
  && ./configure \
- && make -j $(nproc --all || echo 1) && \
+ && make -j $(nproc --all || echo 1) \
  && make install \
  && ldconfig
 ENV PATH="${PATH}:/usr/local/zeek/bin"
