--- a/docker/containers/zeek/Dockerfile.ubuntu:20.04
+++ b/docker/containers/zeek/Dockerfile.ubuntu:20.04
@@ -96,4 +96,5 @@ RUN curl -L "https://github.com/edenhill/librdkafka/archive/v${LIBRDKAFKA_VERSIO
 WORKDIR "librdkafka-${LIBRDKAFKA_VERSION}/"
 RUN ./configure --enable-sasl --install-deps \
  && make -j $(nproc --all || echo 1) \
- && make install
+ && make install \
+ && ldconfig
