--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         platform: [Ubuntu-20.04]
-        zeek-kafka-os: [ubuntu]
+        zeek-kafka-os: [centos, ubuntu]
       fail-fast: false
     runs-on: ${{ matrix.platform }}
     steps:
