--- a/docker/containers/zeek/Dockerfile.ubuntu:20.04
+++ b/docker/containers/zeek/Dockerfile.ubuntu:20.04
@@ -14,10 +14,7 @@
 #  See the License for the specific language governing permissions and
 #  limitations under the License.
 #
-ARG FROM_IMAGE="ubuntu"
-ARG FROM_IMAGE_TAG="20.04"
-
-FROM "${FROM_IMAGE}":"${FROM_IMAGE_TAG}"
+FROM ubuntu:20.04
 
 ARG ZEEK_VERSION
 ARG LIBRDKAFKA_VERSION
