Add release candidates

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,22 @@
 [bumpversion]
 current_version = 0.4.0
 commit_message = "Automatically generated release {new_version}"
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
+serialize =
+	{major}.{minor}.{patch}-{release}{build}
+	{major}.{minor}.{patch}
 commit = True
 tag = True
 push = True
+
+[bumpversion:part:release]
+optional_value = ga
+first_value = rc
+values =
+	rc
+	ga
+
+[bumpversion:part:build]
 
 [bumpversion:file:README.md]
 
