--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [bumpversion]
-current_version = 0.4.0
+current_version = 1.0.0-rc1
 commit_message = "Automatically generated release {new_version}"
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
-serialize =
+serialize = 
 	{major}.{minor}.{patch}-{release}{build}
 	{major}.{minor}.{patch}
 commit = True
@@ -12,7 +12,7 @@ push = True
 [bumpversion:part:release]
 optional_value = ga
 first_value = rc
-values =
+values = 
 	rc
 	ga
 
