--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,6 @@
-version: '2.4'
 services:
   zookeeper:
+    platform: linux/amd64
     build:
       context: containers/zookeeper
       cache_from:
@@ -8,6 +8,7 @@ services:
         - zookeeper:3.4
     image: zeek-kafka_zookeeper:latest
   kafka-1:
+    platform: linux/amd64
     build:
       context: containers/kafka
       cache_from:
@@ -23,6 +24,7 @@ services:
       - KAFKA_LISTENERS=PLAINTEXT://kafka-1:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-1:9092
   kafka-2:
+    platform: linux/amd64
     build:
       context: containers/kafka
       cache_from:
@@ -38,15 +40,15 @@ services:
       - KAFKA_LISTENERS=PLAINTEXT://kafka-2:9092
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka-2:9092
   zeek:
+    platform: linux/amd64
     build:
       context: containers/zeek
-      dockerfile: Dockerfile.${ZEEK_KAFKA_OS}
+      dockerfile: Dockerfile.zeek.latest
       cache_from:
         - zeek-kafka_zeek:latest
         - ${ZEEK_KAFKA_OS}
       args:
-        ZEEK_VERSION: "6.0.3"
-        LIBRDKAFKA_VERSION: "1.4.4"
+        LIBRDKAFKA_VERSION: "2.10.1"
     image: zeek-kafka_zeek:latest
     depends_on:
       zookeeper:
