--- a/docker/containers/zeek/Dockerfile.zeek.latest
+++ b/docker/containers/zeek/Dockerfile.zeek.latest
@@ -60,8 +60,14 @@ RUN gem install coveralls-lcov
 
 ENV PATH="${PATH}:/usr/bin"
 
+# install pip3 and zkg dependencies
+WORKDIR /root
+COPY requirements_latest.txt requirements.txt
 RUN apt-get -y install diffutils \
-  && apt-get clean all
+  python3-pip \
+  && apt-get clean all \
+  && python3 -m pip install --upgrade pip \
+  && python3 -m pip install -r requirements.txt --break-system-packages
 
 # install librdkafka
 WORKDIR /root
