--- a/docker/containers/zeek/Dockerfile.zeek.latest
+++ b/docker/containers/zeek/Dockerfile.zeek.latest
@@ -22,35 +22,35 @@ COPY .screenrc /root
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get -y install \
-  bc \
-  bison \
-  bsdmainutils \
-  cmake \
-  curl \
-  flex \
-  g++ \
-  gcc \
-  git \
-  jq \
-  lcov \
+  #  bc \
+  #  bison \
+  #  bsdmainutils \
+  #  cmake \
+  #  curl \
+  #  flex \
+  #  g++ \
+  #  gcc \
+  #  git \
+  #  jq \
+  #  lcov \
   libcurl4-openssl-dev \
-  libkrb5-dev \
-  libmaxminddb-dev \
+  #  libkrb5-dev \
+  #  libmaxminddb-dev \
   libpcap-dev \
   libsasl2-dev \
   libssl-dev \
   libzstd-dev \
-  make \
-  python3 \
-  python3-dev \
-  python3-pip\
+  #  make \
+  #  python3 \
+  #  python3-dev \
+  #  python3-pip\
   ruby \
-  screen \
-  sqlite3 \
-  swig \
-  tree \
-  unzip \
-  vim \
+  #  screen \
+  #  sqlite3 \
+  #  swig \
+  #  tree \
+  #  unzip \
+  #  vim \
   wget \
   zlib1g-dev \
   && rm -rf /var/lib/apt/lists/*
@@ -60,19 +60,13 @@ RUN gem install coveralls-lcov
 
 ENV PATH="${PATH}:/usr/bin"
 
-# install pip3 and zkg dependencies
-WORKDIR /root
-COPY requirements_latest.txt requirements.txt
 RUN apt-get -y install diffutils \
-  python3-pip \
-  && apt-get clean all \
-  && python3 -m pip install --upgrade pip \
-  && python3 -m pip install -r requirements.txt --break-system-packages
+  && apt-get clean all
 
 # install librdkafka
 WORKDIR /root
 RUN curl -L "https://github.com/confluentinc/librdkafka/archive/refs/tags/v${LIBRDKAFKA_VERSION}.tar.gz" | tar xzv
-WORKDIR "librdkafka-${LIBRDKAFKA_VERSION}/"
+WORKDIR "/root/librdkafka-${LIBRDKAFKA_VERSION}/"
 RUN ./configure --enable-sasl --install-deps \
   && make -j $(nproc --all || echo 1) \
   && make install \
