--- a/docker/containers/zeek/Dockerfile.zeek.latest
+++ b/docker/containers/zeek/Dockerfile.zeek.latest
@@ -42,8 +42,8 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
   libzstd-dev \
   #  make \
   #  python3 \
-  #  python3-dev \
-  #  python3-pip\
+  python3-dev \
+  python3-pip\
   ruby \
   #  screen \
   #  sqlite3 \
