--- a/docker/containers/zeek/Dockerfile.zeek.latest
+++ b/docker/containers/zeek/Dockerfile.zeek.latest
@@ -26,7 +26,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update \
   #  bison \
   #  bsdmainutils \
   #  cmake \
-  #  curl \
+  curl \
   #  flex \
   #  g++ \
   #  gcc \
